# shortcountrynames

./: .gitattributes  .gitignore  .npmignore  MANIFEST.in  Makefile  README.md  datapackage.json  generate_modules.py  index.d.ts  index.js  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  shortcountrynames.csv
.github/workflows/: release.yml
scripts/: create_tag.sh  generate_modules.py
shortcountrynames/: __init__.py  _version.py
